--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">kaughlin-insta</string>
-    <string name="title_activity_bottom_nav">bottomNavActivity</string>
+    <string name="title_activity_bottom_nav">Kaughlin\'s IG</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Post</string>
     <string name="title_notifications">Profile</string>
